--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -7,11 +7,6 @@
             </ng-container>
             </h3>
         </div>
-        <div class="card-toolbar">
-            <a type="button" class="btn btn-light" routerLink="/internal-users">
-                <i class="fa fa-arrow-left"></i>Volver
-            </a>
-            </div>
     </div>
     <div class="card-body">
         <ng-container >
@@ -49,33 +44,64 @@
                     </div>
                     <div class="form-group row">    
                         <div class="col-lg-4">
-                            <label>Departamento</label>
-                            <select formControlName="department" class="form-control form-control-lg form-control-solid">
-                                <option value="NODATA" hidden disabled>Ninguno</option>
-                                <option *ngFor="let item of $_departament" [value]="item.code">{{item.description}}</option>
-                            </select>
-                        </div>                   
+                            <label for="">Departamento</label>
+                            <div class="example-button-row">
+                                <mat-form-field appearance="fill" class="example-full-width">
+                                    <mat-label>Lista de departamentos</mat-label>
+                                    <mat-select [formControl]="toppings" multiple>
+                                      <mat-option *ngFor="let departament of departaments" [value]="departament">{{departament.description}}</mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </div>
                         <div class="col-lg-4">
                             <label>Provincia</label>
-                            <select formControlName="province" class="form-control form-control-lg form-control-solid" [attr.disabled]="isDepartmentValid('department')">
-                                <option value="" hidden disabled>Seleccione una provincia</option>
-                                <option *ngFor="let item of $_province" [value]="item.code">{{item.description}}</option>
-                            </select>
+                            <div class="example-button-row">
+                                <mat-form-field appearance="fill" class="example-full-width">
+                                    <mat-label>Provincias</mat-label>
+                                    <mat-select [formControl]="pokemonControl" multiple>
+                                      <mat-optgroup *ngFor="let group of pokemonGroups" [label]="group.name"
+                                                    [disabled]="group.disabled">
+                                        <mat-option *ngFor="let pokemon of group.pokemon" [value]="pokemon.value">
+                                          {{pokemon.viewValue}}
+                                        </mat-option>
+                                      </mat-optgroup>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
                         </div>
                         <div class="col-lg-4">
                             <label>Distrito</label>
-                            <select formControlName="districtCode" class="form-control form-control-lg form-control-solid" [attr.disabled]="isProvinceValid('province')">
-                                <option value="" hidden disabled>Seleccione un distrito</option>
-                                <option *ngFor="let item of $_district" [value]="item.code">{{item.description}}</option>
-                            </select>
-                        </div>     
-                        <div class="col-lg-4">
-                            <label>CCPP</label>
-                            <select formControlName="populatedCenterCode" class="form-control form-control-lg form-control-solid">
-                                <option value="" hidden disabled>Seleccione un cc.pp</option>
-                                <option *ngFor="let item of $_Ccpp" [value]="item.code">{{item.description}}</option>
-                            </select>
+                            <div class="example-button-row">
+                                <mat-form-field appearance="fill" class="example-full-width">
+                                    <mat-label>Distritos</mat-label>
+                                    <mat-select [formControl]="pokemonControl" multiple>
+                                      <mat-optgroup *ngFor="let group of pokemonGroups" [label]="group.name"
+                                                    [disabled]="group.disabled">
+                                        <mat-option *ngFor="let pokemon of group.pokemon" [value]="pokemon.value">
+                                          {{pokemon.viewValue}}
+                                        </mat-option>
+                                      </mat-optgroup>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
                         </div>
+                        <div class="col-lg-4">
+                            <label>Centro Poblado</label>
+                            <div class="example-button-row">
+                                <mat-form-field appearance="fill" class="example-full-width">
+                                    <mat-label>Distritos</mat-label>
+                                    <mat-select [formControl]="pokemonControl" multiple>
+                                      <mat-optgroup *ngFor="let group of pokemonGroups" [label]="group.name"
+                                                    [disabled]="group.disabled">
+                                        <mat-option *ngFor="let pokemon of group.pokemon" [value]="pokemon.value">
+                                          {{pokemon.viewValue}}
+                                        </mat-option>
+                                      </mat-optgroup>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </div>     
                     </div>
                     <div class="float-right">
                     <a
