--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -49,7 +49,7 @@
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Lista de departamentos</mat-label>
                                     <mat-select multiple (selectionChange)="getSelectedOptions($event)">
-                                        <mat-option *ngFor="let departament of departaments" [id]="departament.code" [value]="departament.code">{{departament.description}}</mat-option>
+                                        <mat-option *ngFor="let departament of $_departament" [id]="departament.code" [value]="departament.code">{{departament.description}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
@@ -94,8 +94,7 @@
                                     <mat-select multiple>
                                         <mat-optgroup *ngFor="let group of provinceGroups" [label]="group.description"
                                                         [disabled]="false">
-                                            <mat-option *ngFor="let pokemon of group.provinces" [value]="pokemon.description" (click)="selectProvince($event)">
-                                            {{pokemon.code}}
+                                            <mat-option *ngFor="let pokemon of group.provinces" [value]="pokemon.description">
                                             </mat-option>
                                         </mat-optgroup>
                                     </mat-select>
@@ -103,6 +102,7 @@
                             </div>
                         </div>     
                     </div>
+                    
                     <div class="float-right">
                     <a
                         class="btn btn-default font-weight-bold mr-2"
