--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -54,7 +54,7 @@
                                             <mat-chip-list>
                                                 <mat-label *ngFor="let provinceGroup of provinceGroups">
                                                     <mat-label *ngFor="let Departament of idsDepartaments">
-                                                        <mat-chip *ngIf="Departament == provinceGroup.id">
+                                                        <mat-chip *ngIf="Departament == provinceGroup.id" [removable]="removable" (removed)="removeDepartament(Departament)">
                                                             {{ provinceGroup.description }}
                                                             <mat-icon matChipRemove>cancel</mat-icon>
                                                         </mat-chip>
@@ -62,8 +62,6 @@
                                                 </mat-label>   
                                             </mat-chip-list>
                                           </mat-select-trigger>
-
-
                                         <mat-option *ngFor="let departament of $_departament" [id]="departament.id" [value]="departament.code">{{departament.description}}</mat-option>
                                     </mat-select>
                                 </mat-form-field>
@@ -75,22 +73,23 @@
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Provincias</mat-label>
                                     <mat-select multiple (selectionChange)="checkProvince($event)">
-
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                              <mat-chip *ngFor="let Pronvice of idsProvinces">
-                                                {{ Pronvice }}
-                                                <mat-icon matChipRemove>cancel</mat-icon>
-                                              </mat-chip>
+                                                <mat-label *ngFor="let districtGroup of districtGroups">
+                                                    <mat-label *ngFor="let Province of idsProvinces">
+                                                        <mat-chip *ngIf="Province == districtGroup.id" [removable]="removable" (removed)="removeProvince(Province)">
+                                                            {{ districtGroup.description }}
+                                                            <mat-icon matChipRemove>cancel</mat-icon>
+                                                        </mat-chip>
+                                                    </mat-label>
+                                                </mat-label>
                                             </mat-chip-list>
-                                          </mat-select-trigger>
-
-                                      <mat-optgroup *ngFor="let group of provinceGroups" [label]="group.description"
-                                                    [disabled]="group.disabled">
-                                        <mat-option *ngFor="let province of group.provinces" [id]="province.id" [value]="province.code">
-                                          {{province.description}}
-                                        </mat-option>
-                                      </mat-optgroup>
+                                        </mat-select-trigger>
+                                        <mat-optgroup *ngFor="let group of provinceGroups" [label]="group.description" [disabled]="group.disabled">
+                                            <mat-option *ngFor="let province of group.provinces" [id]="province.id" [value]="province.code">
+                                            {{province.description}}
+                                            </mat-option>
+                                        </mat-optgroup>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
@@ -101,23 +100,23 @@
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Distritos</mat-label>
                                     <mat-select multiple (selectionChange)="checkDistrict($event)">
-
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                              <mat-chip *ngFor="let District of idsDistricts"
-                                               >
-                                                {{ District }}
-                                                <mat-icon matChipRemove>cancel</mat-icon>
-                                              </mat-chip>
+                                                <mat-label *ngFor="let ccppGroup of ccppsGroups">
+                                                    <mat-label *ngFor="let District of idsDistricts">
+                                                        <mat-chip *ngIf="District == ccppGroup.id" [removable]="removable" (removed)="removeDistrict(District)">
+                                                            {{ ccppGroup.description }}
+                                                            <mat-icon matChipRemove>cancel</mat-icon>
+                                                        </mat-chip>
+                                                    </mat-label>
+                                                </mat-label>
                                             </mat-chip-list>
-                                          </mat-select-trigger>
-
-                                      <mat-optgroup *ngFor="let group of districtGroups" [label]="group.description"
-                                                    [disabled]="group.disabled">
-                                        <mat-option *ngFor="let district of group.districts" [id]="district.id" [value]="district.code">
-                                          {{district.description}}
-                                        </mat-option>
-                                      </mat-optgroup>
+                                        </mat-select-trigger>
+                                        <mat-optgroup *ngFor="let group of districtGroups" [label]="group.description" [disabled]="group.disabled">
+                                            <mat-option *ngFor="let district of group.districts" [id]="district.id" [value]="district.code">
+                                            {{district.description}}
+                                            </mat-option>
+                                        </mat-optgroup>
                                     </mat-select>
                                 </mat-form-field>
                             </div>
