--- a/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
+++ b/src/app/modules/admin/asign-internal-user/edit-asign-internal-user/edit-asign-internal-user.component.html
@@ -48,17 +48,14 @@
                             <div class="example-button-row">
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Lista de departamentos</mat-label>
-                                    <mat-select multiple (selectionChange)="checkDepartament($event)">
-
+                                    <mat-select multiple (selectionChange)="checkDepartament($event)" #MatDepartamento>
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                                <mat-label *ngFor="let provinceGroup of departamentos">
-                                                    <mat-label *ngFor="let Departament of idsDepartaments">
-                                                        <mat-chip *ngIf="Departament == provinceGroup.id" [removable]="removable" (removed)="removeDepartament(Departament)">
-                                                            {{ provinceGroup.description }}
-                                                            <mat-icon matChipRemove>cancel</mat-icon>
-                                                        </mat-chip>
-                                                    </mat-label>
+                                                <mat-label *ngFor="let departamento of arrayGeneral">
+                                                    <mat-chip [removable]="removable" (removed)="removeDepartament(departamento.code)">
+                                                        {{ departamento.description }}
+                                                        <mat-icon matChipRemove>cancel</mat-icon>
+                                                    </mat-chip>
                                                 </mat-label>   
                                             </mat-chip-list>
                                           </mat-select-trigger>
@@ -72,20 +69,20 @@
                             <div class="example-button-row">
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Provincias</mat-label>
-                                    <mat-select multiple (selectionChange)="checkProvince($event)">
+                                    <mat-select multiple (selectionChange)="checkProvince($event)" #MatProvincia>
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                                <mat-label *ngFor="let districtGroup of provincias">
-                                                    <mat-label *ngFor="let Province of idsProvinces">
-                                                        <mat-chip *ngIf="Province == districtGroup.id" [removable]="removable" (removed)="removeProvince(Province)">
-                                                            {{ districtGroup.description }}
+                                                <mat-label *ngFor="let departamento of arrayGeneral">
+                                                    <mat-label *ngFor="let provincia of departamento.provinces">
+                                                        <mat-chip [removable]="removable" (removed)="removeProvince(provincia.code)">
+                                                            {{ provincia.description }}
                                                             <mat-icon matChipRemove>cancel</mat-icon>
                                                         </mat-chip>
                                                     </mat-label>
                                                 </mat-label>
                                             </mat-chip-list>
                                         </mat-select-trigger>
-                                        <mat-optgroup *ngFor="let group of departamentos" [label]="group.description" [disabled]="group.disabled">
+                                        <mat-optgroup *ngFor="let group of departamentos" [label]="group.description">
                                             <mat-option *ngFor="let province of group.provinces" [id]="province.id" [value]="province.code">
                                             {{province.description}}
                                             </mat-option>
@@ -99,15 +96,17 @@
                             <div class="example-button-row">
                                 <mat-form-field appearance="fill" class="example-full-width">
                                     <mat-label>Distritos</mat-label>
-                                    <mat-select multiple (selectionChange)="checkDistrict($event)">
+                                    <mat-select multiple (selectionChange)="checkDistrict($event)" #MatDistrito>
                                         <mat-select-trigger>
                                             <mat-chip-list>
-                                                <mat-label *ngFor="let ccppGroup of distritos">
-                                                    <mat-label *ngFor="let District of idsDistricts">
-                                                        <mat-chip *ngIf="District == ccppGroup.id" [removable]="removable" (removed)="removeDistrict(District)">
-                                                            {{ ccppGroup.description }}
-                                                            <mat-icon matChipRemove>cancel</mat-icon>
-                                                        </mat-chip>
+                                                <mat-label *ngFor="let departamento of arrayGeneral">
+                                                    <mat-label *ngFor="let provincia of departamento.provinces">
+                                                        <mat-label *ngFor="let distrito of provincia.districts">
+                                                            <mat-chip [removable]="removable" (removed)="removeDistrict(distrito.code)">
+                                                                {{ distrito.description }}
+                                                                <mat-icon matChipRemove>cancel</mat-icon>
+                                                            </mat-chip>
+                                                        </mat-label>
                                                     </mat-label>
                                                 </mat-label>
                                             </mat-chip-list>
