--- a/src/app/modules/admin/task/notes/notes.component.html
+++ b/src/app/modules/admin/task/notes/notes.component.html
@@ -1,12 +1,12 @@
-<form action="#" class="form form-label-right">
+<form action="#" class="form form-label-right" (ngSubmit)="save()" [formGroup]="formGroup">
     <div class="form-group row">
         <div class="col-lg-4">
             <label for="roles">Titulo de la nota</label>
             <input 
                 type="text" 
                 class="form-control form-control-lg form-control-solid"
-                placeholder="Referencia"
-                formControlName="documentNumber"
+                placeholder="Título"
+                formControlName="title"
             />
         </div>
         <div class="col-lg-4">
@@ -21,7 +21,7 @@
     <div class="form-group row">
         <div class="col-lg-12">
             <label>Descripcion de la tarea</label>
-            <textarea name="" id="" cols="100" rows="5" class="form-control form-control-lg form-control-solid"></textarea>
+            <textarea name="" id="" cols="100" rows="5" class="form-control form-control-lg form-control-solid" formControlName="description"></textarea>
         </div>
     </div>
     <div class="float-right">
