--- a/src/app/modules/admin/task/notes/notes.component.html
+++ b/src/app/modules/admin/task/notes/notes.component.html
@@ -1,39 +1,82 @@
-<form action="#" class="form form-label-right" (ngSubmit)="save()" [formGroup]="formGroup">
+<div class="form form-label-right">
     <div class="form-group row">
-        <div class="col-lg-4">
-            <label for="roles">Titulo de la nota</label>
-            <input 
-                type="text" 
-                class="form-control form-control-lg form-control-solid"
-                placeholder="Título"
-                formControlName="title"
-            />
+        <div class="col-lg-3">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Nombre</mat-label>
+                <input matInput placeholder="Codigo" >
+                <mat-hint>Buscar por Nombre</mat-hint>
+            </mat-form-field>
         </div>
-        <div class="col-lg-4">
-            <label>Fecha creación</label>
-            <input 
-                type="date" 
-                class="form-control form-control-lg form-control-solid"
-                formControlName="createdAt"
-            />
+        <div class="col-lg-3">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Título</mat-label>
+                <input matInput placeholder="Codigo" >
+                <mat-hint>Buscar por Título</mat-hint>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-3">
+            <mat-form-field appearance="fill">
+                <mat-label>Rango de fecha</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate placeholder="Fecha inicio">
+                    <input matEndDate placeholder="Fecha fin">
+                </mat-date-range-input>
+                <mat-hint>Buscar por Rango de Fecha</mat-hint>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-1">
+        </div>
+        <div class="col-lg-2">
+            <button class="btn btn-outline-primary mb-2 mr-2" (click)="openModal()">CREAR NOTA</button>
         </div>
     </div>
-    <div class="form-group row">
-        <div class="col-lg-12">
-            <label>Descripcion de la tarea</label>
-            <textarea name="" id="" cols="100" rows="5" class="form-control form-control-lg form-control-solid" formControlName="description"></textarea>
-        </div>
-    </div>
-    <div class="float-right">
-    <a
-        class="btn btn-default font-weight-bold mr-2"
-        >Cancelar</a
+</div>
+<div class="table-responsive angular-bootstrap-table">
+    <table
+        class="table table-head-custom table-vertical-center overflow-hidden"
     >
-    <button
-        type="submit"
-        class="btn btn-primary font-weight-bold mr-2"
-    >
-        Guardar
-    </button>
-    </div>
-</form>
+        <thead>
+            <th>
+            USUARIO
+            </th>
+            <th>
+            TITULO
+            </th>
+            <th>
+            FECHA CREACION
+            </th>
+            <th>
+            FECHA CADUCIDAD
+            </th>
+            <th>
+            RESUMEN TAREA
+            </th>
+            <th>OPCIONES</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td> usuario 1</td>
+                <td> titulo 1</td>
+                <td> 2021-01-01 </td>
+                <td> 2021-01-01 </td>
+                <td> resumen 1 </td>
+            </tr>
+            <tr>
+                <td> usuario 1</td>
+                <td> titulo 1</td>
+                <td> 2021-01-01 </td>
+                <td> 2021-01-01 </td>
+                <td> resumen 1 </td>
+            </tr>
+            <tr>
+                <td> usuario 1</td>
+                <td> titulo 1</td>
+                <td> 2021-01-01 </td>
+                <td> 2021-01-01 </td>
+                <td> resumen 1 </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
