--- a/src/app/modules/admin/task/tasks/tasks.component.html
+++ b/src/app/modules/admin/task/tasks/tasks.component.html
@@ -62,6 +62,42 @@
                 <td> 2021-01-01 </td>
                 <td> 2021-01-01 </td>
                 <td> resumen 1 </td>
+                <td>
+                    <a
+                      title="Edit product"
+                      class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
+                      [routerLink]="'/ecommerce/product/edit/'"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/view.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-primary"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                  </td>
             </tr>
             <tr>
                 <td> usuario 1</td>
@@ -69,6 +105,42 @@
                 <td> 2021-01-01 </td>
                 <td> 2021-01-01 </td>
                 <td> resumen 1 </td>
+                <td>
+                    <a
+                      title="Edit product"
+                      class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
+                      [routerLink]="'/ecommerce/product/edit/'"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/view.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-primary"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                  </td>
             </tr>
             <tr>
                 <td> usuario 1</td>
@@ -76,6 +148,42 @@
                 <td> 2021-01-01 </td>
                 <td> 2021-01-01 </td>
                 <td> resumen 1 </td>
+                <td>
+                    <a
+                      title="Edit product"
+                      class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
+                      [routerLink]="'/ecommerce/product/edit/'"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/view.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-primary"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                    <a
+                      title="Delete product"
+                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
+                    >
+                      <span
+                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
+                        cacheSVG="true"
+                        class="svg-icon svg-icon-md svg-icon-danger"
+                      >
+                      </span>
+                    </a>
+                  </td>
             </tr>
         </tbody>
     </table>
