--- a/src/app/modules/admin/task/tasks/tasks.component.html
+++ b/src/app/modules/admin/task/tasks/tasks.component.html
@@ -38,116 +38,18 @@
         class="table table-head-custom table-vertical-center overflow-hidden"
     >
         <thead>
-            <th>
-            USUARIO
-            </th>
-            <th>
-            TITULO
-            </th>
-            <th>
-            FECHA CREACION
-            </th>
-            <th>
-            FECHA CADUCIDAD
-            </th>
-            <th>
-            RESUMEN TAREA
-            </th>
+            <th>USUARIO</th>
+            <th>TITULO</th>
+            <th>FECHA CADUCIDAD</th>
+            <th>RESUMEN TAREA</th>
             <th>OPCIONES</th>
         </thead>
         <tbody>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
-                <td>
-                    <a
-                      title="Edit product"
-                      class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                      [routerLink]="'/ecommerce/product/edit/'"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/view.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-primary"
-                      >
-                      </span>
-                    </a>
-                    <a
-                      title="Delete product"
-                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-danger"
-                      >
-                      </span>
-                    </a>
-                    <a
-                      title="Delete product"
-                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-danger"
-                      >
-                      </span>
-                    </a>
-                  </td>
-            </tr>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
-                <td>
-                    <a
-                      title="Edit product"
-                      class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                      [routerLink]="'/ecommerce/product/edit/'"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/view.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-primary"
-                      >
-                      </span>
-                    </a>
-                    <a
-                      title="Delete product"
-                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/do-not-disturb.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-danger"
-                      >
-                      </span>
-                    </a>
-                    <a
-                      title="Delete product"
-                      class="btn btn-icon btn-light btn-hover-danger btn-sm mx-3"
-                    >
-                      <span
-                        [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
-                        cacheSVG="true"
-                        class="svg-icon svg-icon-md svg-icon-danger"
-                      >
-                      </span>
-                    </a>
-                  </td>
-            </tr>
-            <tr>
-                <td> usuario 1</td>
-                <td> titulo 1</td>
-                <td> 2021-01-01 </td>
-                <td> 2021-01-01 </td>
-                <td> resumen 1 </td>
+            <tr *ngFor="let task of $_task">
+                <td> {{ task.user_asigned }} </td>
+                <td> {{ task.title }} </td>
+                <td> {{ task.expiration }} </td>
+                <td> {{ task.description }} </td>
                 <td>
                     <a
                       title="Edit product"
