enviando datos al modal

--- a/src/app/modules/admin/task/tasks/tasks.component.html
+++ b/src/app/modules/admin/task/tasks/tasks.component.html
@@ -54,7 +54,7 @@
                     <a
                       title="Edit product"
                       class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                      [routerLink]="'/ecommerce/product/edit/'"
+                      (click)="editTask(task)"
                     >
                       <span
                         [inlineSVG]="'./assets/media/svg/view.svg'"
